@@ -169,7 +169,7 @@ uqm_prepare_config()
 	}
 	CHOICE_sound_DEFAULT=mixsdl
 
-	CHOICE_ovcodec_OPTIONS="standard tremor"
+	CHOICE_ovcodec_OPTIONS="standard tremor none"
 	CHOICE_ovcodec_TITLE="Ogg Vorbis codec"
 	CHOICE_ovcodec_OPTION_standard_TITLE="Xiph libogg + libvorbis"
 	CHOICE_ovcodec_OPTION_standard_PRECOND="have_library vorbisfile"
@@ -177,6 +177,7 @@ uqm_prepare_config()
 	CHOICE_ovcodec_OPTION_standard_ACTION=ovcodec_standard_action
 	ovcodec_standard_action() {
 		use_library vorbisfile
+		OGGVORBIS=vorbisfile
 #		use_library vorbis
 	}
 	CHOICE_ovcodec_OPTION_tremor_TITLE="Tremor (avoids floating point math)"
@@ -184,9 +185,16 @@ uqm_prepare_config()
 	CHOICE_ovcodec_OPTION_tremor_ACTION=ovcodec_tremor_action
 	ovcodec_tremor_action() {
 		CFLAGS="$CFLAGS -DOVCODEC_TREMOR"
+		OGGVORBIS=tremor
 		use_library tremor
 	}
 	CHOICE_ovcodec_DEFAULT=standard
+	CHOICE_ovcodec_OPTION_none_TITLE="No Ogg Vorbis support"
+	CHOICE_ovcodec_OPTION_none_ACTION=ovcodec_none_action
+	ovcodec_none_action() {
+		CFLAGS="$CFLAGS -DOVCODEC_NONE"
+		OGGVORBIS=none
+	}
 
 	CHOICE_mikmod_OPTIONS="internal external"
 	CHOICE_mikmod_TITLE="Tracker music support"
@@ -349,7 +357,7 @@ uqm_process_config() {
 			PREPROC_C MKDEP_C COMPILE_C \
 			PREPROC_OBJC MKDEP_OBJC COMPILE_OBJC \
 			MAKE ECHON SED DEBUG JOYSTICK NETPLAY \
-			SOUNDMODULE USE_INTERNAL_MIKMOD \
+			OGGVORBIS SOUNDMODULE USE_INTERNAL_MIKMOD \
 			HAVE_OPENGL HAVE_REGEX_H_FLAG USE_ZIP_IO \
 			USE_PLATFORM_ACCEL USE_WINSOCK \
 			INSTALL_LIBDIR INSTALL_BINDIR INSTALL_SHAREDIR \
